--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -2,19 +2,18 @@ trigger:
   - main
 
 variables:
-  databricks-host: 'https://adb-4188668828067310.10.azuredatabricks.net/'
-  notebook-folder: '/Users/tushar.pathak@tigeranalytics.com/'
-  cluster-id: '0708-064558-lglz5exu'
-  notebook-name: 'Deepchecks_Model_Testing_v1'
+  databricks_host: 'https://adb-4188668828067310.10.azuredatabricks.net/'
+  notebook_folder: '/Users/tushar.pathak@tigeranalytics.com/'
+  cluster_id: '0708-064558-lglz5exu'
+  notebook_name: 'Deepchecks_Model_Testing_v1'
 
-  steps:
+steps:
 - task: UsePythonVersion@0
+  displayName: 'Use Python 3.x'
   inputs:
     versionSpec: '3.7'
     addToPath: true
     architecture: 'x64'
-#- task: UsePythonVersion@0
-  displayName: 'Use Python 3.x'
 
 - script: |
     pip install databricks-cli
@@ -23,39 +22,40 @@ variables:
 - script: |
     JOB_ID=$(databricks jobs create --json '{
      "name": "Testrun",
-     "existing_cluster_id": "$(cluster-id)",
+     "existing_cluster_id": "$(cluster_id)",
      "timeout_seconds": 3600,
      "max_retries": 1,
      "notebook_task": {
-       "notebook_path": "$(notebook-folder)$(notebook-name)",
+       "notebook_path": "$(notebook_folder)$(notebook_name)",
        "base_parameters": {}
      }
-    }' | jq '.job_id')
+    }' | jq -r '.job_id')
 
-    RUN_ID=$(databricks jobs run-now --job-id $JOB_ID | jq '.run_id')
+    RUN_ID=$(databricks jobs run-now --job-id $JOB_ID | jq -r '.run_id')
 
     job_status="PENDING"
-    while [ $job_status = "RUNNING" ] || [ $job_status = "PENDING" ]
+    while [[ "$job_status" == "RUNNING" || "$job_status" == "PENDING" ]]
     do
      sleep 2
      job_status=$(databricks runs get --run-id $RUN_ID | jq -r '.state.life_cycle_state')
-     echo Status $job_status
+     echo "Status: $job_status"
     done
 
     RESULT=$(databricks runs get-output --run-id $RUN_ID)
 
     RESULT_STATE=$(echo $RESULT | jq -r '.metadata.state.result_state')
     RESULT_MESSAGE=$(echo $RESULT | jq -r '.metadata.state.state_message')
-    if [ $RESULT_STATE = "FAILED" ]
+    if [[ "$RESULT_STATE" == "FAILED" ]]
     then
      echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
      echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
+     exit 1
     fi
 
     echo $RESULT | jq .
   displayName: 'Run Databricks Notebook'
 
-  - task: PublishPipelineArtifact@1
+- task: PublishPipelineArtifact@1
   inputs:
     targetPath: '$(Build.ArtifactStagingDirectory)'
     artifact: 'reports'
@@ -67,6 +67,6 @@ variables:
     artifactName: 'databricks-notebook-artifact'
   condition: always
 
-  env:
-    DATABRICKS_TOKEN: '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'
-    DATABRICKS_HOST: $(databricks-host)
+env:
+  DATABRICKS_TOKEN: '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'
+  DATABRICKS_HOST: $(databricks_host)
