--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -70,10 +70,10 @@ jobs:
     inputs:
       targetPath: '$(Build.ArtifactStagingDirectory)'
       artifact: 'reports'
-    condition: always
+    condition: always()  # Corrected syntax
 
   - task: PublishBuildArtifacts@1
     inputs:
       pathToPublish: '$(Build.ArtifactStagingDirectory)'
       artifactName: 'databricks-notebook-artifact'
-    condition: always
+    condition: always()  # Corrected syntax
