--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -2,73 +2,60 @@ trigger:
   - main
 
 variables:
-  databricks_host: 'https://adb-4188668828067310.10.azuredatabricks.net'
-  notebook_folder: '/Users/tushar.pathak@tigeranalytics.com/'
-  cluster_id: '0708-064558-lglz5exu'
-  notebook_name: 'Deepchecks_Model_Testing_v2'
-  DATABRICKS_TOKEN: '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'  # Replace with your secret variable name in Azure DevOps
+  databricks-host: 'https://adb-4188668828067310.10.azuredatabricks.net'
+  notebook-folder: '/Users/tushar.pathak@tigeranalytics.com/'
+  cluster-id: '0708-064558-lglz5exu'
+  notebook-name: 'Deepchecks_Model_Testing_v2'
 
-jobs:
-  - job: Run_Databricks_Notebook
-    displayName: 'Run Databricks Notebook'
-    pool:
-      vmImage: 'ubuntu-latest'
-  
-    steps:
-      - task: UsePythonVersion@0
-        displayName: 'Use Python 3.x'
-        inputs:
-          versionSpec: '3.x'
-          addToPath: true
 
-      - script: |
-          pip install databricks-cli
-        displayName: 'Install databricks-cli'
+steps:
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '3.7'
+    addToPath: true
+    architecture: 'x64'
+#- task: UsePythonVersion@0
+  displayName: 'Use Python 3.x'
 
-      - script: |
-          # Install jq
-          sudo apt-get update
-          sudo apt-get install -y jq
+- script: |
+    pip install databricks-cli
+  displayName: 'Install databricks-cli'
 
-          export DATABRICKS_TOKEN="${{ variables.DATABRICKS_TOKEN }}"
-          export DATABRICKS_HOST="${{ variables.databricks_host }}"
+- script: |
+    JOB_ID=$(databricks jobs create --json '{
+     "name": "Testrun",
+     "existing_cluster_id": "$(cluster-id)",
+     "timeout_seconds": 3600,
+     "max_retries": 1,
+     "notebook_task": {
+       "notebook_path": "$(notebook-folder)$(notebook-name)",
+       "base_parameters": {}
+     }
+    }' | jq '.job_id')
 
-          JOB_ID=$(databricks jobs create --json '{
-           "name": "Testrun",
-           "existing_cluster_id": "'"${{ variables.cluster_id }}"'",
-           "timeout_seconds": 3600,
-           "max_retries": 1,
-           "notebook_task": {
-             "notebook_path": "'"${{ variables.notebook_folder }}${{ variables.notebook_name }}"'",
-             "base_parameters": {}
-           }
-          }' | jq -r '.job_id')
+    RUN_ID=$(databricks jobs run-now --job-id $JOB_ID | jq '.run_id')
 
-          RUN_ID=$(databricks jobs run-now --job-id $JOB_ID | jq -r '.run_id')
+    job_status="PENDING"
+    while [ $job_status = "RUNNING" ] || [ $job_status = "PENDING" ]
+    do
+     sleep 2
+     job_status=$(databricks runs get --run-id $RUN_ID | jq -r '.state.life_cycle_state')
+     echo Status $job_status
+    done
 
-          echo "Waiting for notebook execution to complete..."
+    RESULT=$(databricks runs get-output --run-id $RUN_ID)
 
-          # Check run result
-          RESULT=$(databricks runs get-output --run-id $RUN_ID)
-          RESULT_STATE=$(echo $RESULT | jq -r '.metadata.state.result_state')
-          if [[ "$RESULT_STATE" == "FAILED" ]]
-          then
-            echo "Notebook execution failed."
-            exit 1
-          else
-            echo "Notebook executed successfully."
-          fi
+    RESULT_STATE=$(echo $RESULT | jq -r '.metadata.state.result_state')
+    RESULT_MESSAGE=$(echo $RESULT | jq -r '.metadata.state.state_message')
+    if [ $RESULT_STATE = "FAILED" ]
+    then
+     echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
+     echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
+    fi
 
-        displayName: 'Run Databricks Notebook'
+    echo $RESULT | jq .
+  displayName: 'Run Databricks Notebook'
 
-      - task: PublishPipelineArtifact@1
-        inputs:
-          targetPath: '$(Build.ArtifactStagingDirectory)'
-          artifact: 'reports'
-        condition: always()
-
-      - task: PublishBuildArtifacts@1
-        inputs:
-          pathToPublish: '$(Build.ArtifactStagingDirectory)'
-          artifactName: 'databricks-notebook-artifact'
-        condition: always()
+  env:
+    DATABRICKS_TOKEN: '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'
+    DATABRICKS_HOST: $(databricks-host)
