--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -10,7 +10,6 @@ variables:
   cluster-id: '0708-064558-lglz5exu'
   notebook-name: 'Deepchecks_Model_Testing_v2'
 
-
 steps:
 - task: UsePythonVersion@0
   inputs:
@@ -24,7 +23,10 @@ steps:
   displayName: 'Install databricks-cli and jq'
 
 - script: |
+    # Configure Databricks CLI
     databricks jobs configure --version=2.1
+
+    # Create a new job and capture the Job ID
     JOB_ID=$(databricks jobs create --json '{
      "name": "Testrun",
      "existing_cluster_id": "$(cluster-id)",
@@ -38,33 +40,48 @@ steps:
 
     echo "Job ID: $JOB_ID"
 
-    RUN_ID=$(databricks jobs run-now --job-id $JOB_ID | jq -r '.run_id')
+    # Check if JOB_ID is empty
+    if [ -z "$JOB_ID" ]; then
+      echo "Error: Job ID is empty. Exiting."
+      exit 1
+    fi
+
+    # Run the job and capture the Run ID
+    RUN_ID=$(databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
 
     echo "Run ID: $RUN_ID"
 
+    # Check if RUN_ID is empty
+    if [ -z "$RUN_ID" ]; then
+      echo "Error: Run ID is empty. Exiting."
+      exit 1
+    fi
+
+    # Poll for job status
     job_status="PENDING"
     while [ "$job_status" = "RUNNING" ] || [ "$job_status" = "PENDING" ]
     do
      sleep 2
-     job_status=$(databricks runs get --run-id $RUN_ID | jq -r '.state.life_cycle_state')
+     job_status=$(databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
      echo "Status: $job_status"
     done
 
-    RESULT=$(databricks runs get-output --run-id $RUN_ID)
+    # Get job result
+    RESULT=$(databricks runs get-output --run-id "$RUN_ID")
 
-    RESULT_STATE=$(echo $RESULT | jq -r '.metadata.state.result_state')
-    RESULT_MESSAGE=$(echo $RESULT | jq -r '.metadata.state.state_message')
-    if [ "$RESULT_STATE" = "FAILED" ]
-    then
+    RESULT_STATE=$(echo "$RESULT" | jq -r '.metadata.state.result_state')
+    RESULT_MESSAGE=$(echo "$RESULT" | jq -r '.metadata.state.state_message')
+
+    if [ "$RESULT_STATE" = "FAILED" ]; then
      echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
      echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
     else
      echo "##vso[task.complete result=Succeeded;done=true;]Job completed successfully"
     fi
 
-    echo $RESULT | jq .
+    echo "$RESULT" | jq .
   displayName: 'Run Databricks Notebook'
 
   env:
-    DATABRICKS_TOKEN: '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'
+    DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
     DATABRICKS_HOST: $(databricks-host)
