--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -1,8 +1,8 @@
 resources:
-  - repo: self
-
-trigger:
-  - main
+  repositories:
+    - repository: self
+      trigger:
+        - main
 
 variables:
   databricks-host: 'https://adb-4188668828067310.10.azuredatabricks.net'
@@ -10,90 +10,94 @@ variables:
   cluster-id: '0708-064558-lglz5exu'
   notebook-name: 'Deepchecks_Model_Testing_v2'
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.7'
-    addToPath: true
-    architecture: 'x64'
-  displayName: 'Use Python 3.x'
+jobs:
+- job: Run_Databricks_Job
+  pool:
+    vmImage: 'ubuntu-latest'
 
-- script: |
-    pip install databricks-cli jq
-  displayName: 'Install databricks-cli and jq'
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x'
+      addToPath: true
 
-- script: |
-    # Configure Databricks CLI
-    databricks jobs configure --version=2.1
+  - script: |
+      pip install databricks-cli jq
+    displayName: 'Install databricks-cli and jq'
 
-    # Create a new job and capture the Job ID
-    JOB_ID=$(databricks jobs create --json '{
-     "name": "Testrun",
-     "existing_cluster_id": "$(cluster-id)",
-     "timeout_seconds": 3600,
-     "max_retries": 1,
-     "notebook_task": {
-       "notebook_path": "$(notebook-folder)$(notebook-name)",
-       "base_parameters": {}
-     }
-    }' | jq -r '.job_id')
+  - script: |
+      # Configure Databricks CLI
+      /opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks configure --token
+      /opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks jobs configure --version=2.1
 
-    echo "Job ID: $JOB_ID"
+      # Create a new job and capture the Job ID
+      JOB_ID=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks jobs create --json '{
+       "name": "Testrun",
+       "existing_cluster_id": "'"$cluster-id"'",
+       "timeout_seconds": 3600,
+       "max_retries": 1,
+       "notebook_task": {
+         "notebook_path": "'"$notebook-folder$notebook-name"'",
+         "base_parameters": {}
+       }
+      }' | jq -r '.job_id')
 
-    # Check if JOB_ID is empty
-    if [ -z "$JOB_ID" ]; then
-      echo "Error: Job ID is empty. Exiting."
-      exit 1
-    fi
+      echo "Job ID: $JOB_ID"
 
-    # Run the job and capture the Run ID
-    RUN_ID=$(databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
+      # Check if JOB_ID is empty
+      if [ -z "$JOB_ID" ]; then
+        echo "Error: Job ID is empty. Exiting."
+        exit 1
+      fi
 
-    echo "Run ID: $RUN_ID"
+      # Run the job and capture the Run ID
+      RUN_ID=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
 
-    # Check if RUN_ID is empty
-    if [ -z "$RUN_ID" ]; then
-      echo "Error: Run ID is empty. Exiting."
-      exit 1
-    fi
+      echo "Run ID: $RUN_ID"
 
-    # Poll for job status
-    job_status="PENDING"
-    while [ "$job_status" = "RUNNING" ] || [ "$job_status" = "PENDING" ]
-    do
-     sleep 2
-     job_status=$(databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
-     echo "Status: $job_status"
-    done
+      # Check if RUN_ID is empty
+      if [ -z "$RUN_ID" ]; then
+        echo "Error: Run ID is empty. Exiting."
+        exit 1
+      fi
 
-    # Get job result
-    RESULT=$(databricks runs get-output --run-id "$RUN_ID")
+      # Poll for job status
+      job_status="PENDING"
+      while [ "$job_status" = "RUNNING" ] || [ "$job_status" = "PENDING" ]
+      do
+       sleep 2
+       job_status=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
+       echo "Status: $job_status"
+      done
 
-    RESULT_STATE=$(echo "$RESULT" | jq -r '.metadata.state.result_state')
-    RESULT_MESSAGE=$(echo "$RESULT" | jq -r '.metadata.state.state_message')
+      # Get job result
+      RESULT=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks runs get-output --run-id "$RUN_ID")
 
-    if [ "$RESULT_STATE" = "FAILED" ]; then
-     echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
-     echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
-    else
-     echo "##vso[task.complete result=Succeeded;done=true;]Job completed successfully"
-    fi
+      RESULT_STATE=$(echo "$RESULT" | jq -r '.metadata.state.result_state')
+      RESULT_MESSAGE=$(echo "$RESULT" | jq -r '.metadata.state.state_message')
 
-    echo "$RESULT" | jq .
-  displayName: 'Run Databricks Notebook'
+      if [ "$RESULT_STATE" = "FAILED" ]; then
+       echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
+       echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
+      else
+       echo "##vso[task.complete result=Succeeded;done=true;]Job completed successfully"
+      fi
+
+      echo "$RESULT" | jq .
+    displayName: 'Run Databricks Notebook'
   
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)/Reports'
-    artifact: 'reports'
-  condition: always()
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(Build.ArtifactStagingDirectory)/Reports'
+      artifact: 'reports'
+    condition: always()
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathToPublish: '$(Build.ArtifactStagingDirectory)'
-    artifactName: 'databricks-notebook-artifact'
-  condition: always()
-  
-  env:
-    DATABRICKS_TOKEN: 'dapi1062f3ecc6b393a6c5934704162792b4-3'
-    DATABRICKS_HOST: $(databricks-host)
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathToPublish: '$(Build.ArtifactStagingDirectory)'
+      artifactName: 'databricks-notebook-artifact'
+    condition: always()
+    
+    env:
+      DATABRICKS_TOKEN: 'dapi1062f3ecc6b393a6c5934704162792b4-3'
+      DATABRICKS_HOST: $(databricks-host)
