--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -26,12 +26,13 @@ jobs:
     displayName: 'Install databricks-cli and jq'
 
   - script: |
-      # Configure Databricks CLI
-      /opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks configure --token
-      /opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks jobs configure --version=2.1
+      # Configure Databricks CLI (if necessary)
+      # Ensure the correct path to databricks command is used
+      databricks configure --token
+      databricks jobs configure --version=2.1
 
       # Create a new job and capture the Job ID
-      JOB_ID=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks jobs create --json '{
+      JOB_ID=$(databricks jobs create --json '{
        "name": "Testrun",
        "existing_cluster_id": "'"$cluster-id"'",
        "timeout_seconds": 3600,
@@ -51,7 +52,7 @@ jobs:
       fi
 
       # Run the job and capture the Run ID
-      RUN_ID=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
+      RUN_ID=$(databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
 
       echo "Run ID: $RUN_ID"
 
@@ -66,12 +67,12 @@ jobs:
       while [ "$job_status" = "RUNNING" ] || [ "$job_status" = "PENDING" ]
       do
        sleep 2
-       job_status=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
+       job_status=$(databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
        echo "Status: $job_status"
       done
 
       # Get job result
-      RESULT=$(/opt/hostedtoolcache/Python/3.7.17/x64/bin/databricks runs get-output --run-id "$RUN_ID")
+      RESULT=$(databricks runs get-output --run-id "$RUN_ID")
 
       RESULT_STATE=$(echo "$RESULT" | jq -r '.metadata.state.result_state')
       RESULT_MESSAGE=$(echo "$RESULT" | jq -r '.metadata.state.state_message')
