--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -1,8 +1,8 @@
 resources:
-  - repo: self
-
-trigger:
-  - main
+  repositories:
+    - repository: self
+      trigger:
+        - main
 
 variables:
   databricks-host: 'https://adb-4188668828067310.10.azuredatabricks.net'
@@ -10,91 +10,96 @@ variables:
   cluster-id: '0708-064558-lglz5exu'
   notebook-name: 'Deepchecks_Model_Testing_v2'
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '3.7'
-    addToPath: true
-    architecture: 'x64'
-  displayName: 'Use Python 3.x'
-
-- script: |
-    pip install databricks-cli jq
-  displayName: 'Install databricks-cli and jq'
-
-- script: |
-    # Configure Databricks CLI
-    databricks jobs configure --version=2.1
-
-    # Create a new job and capture the Job ID
-    JOB_ID=$(databricks jobs create --json '{
-     "name": "Testrun",
-     "existing_cluster_id": "$(cluster-id)",
-     "timeout_seconds": 3600,
-     "max_retries": 1,
-     "notebook_task": {
-       "notebook_path": "$(notebook-folder)$(notebook-name)",
-       "base_parameters": {}
-     }
-    }' | jq -r '.job_id')
-
-    echo "Job ID: $JOB_ID"
-
-    # Check if JOB_ID is empty
-    if [ -z "$JOB_ID" ]; then
-      echo "Error: Job ID is empty. Exiting."
-      exit 1
-    fi
-
-    # Run the job and capture the Run ID
-    RUN_ID=$(databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
-
-    echo "Run ID: $RUN_ID"
-
-    # Check if RUN_ID is empty
-    if [ -z "$RUN_ID" ]; then
-      echo "Error: Run ID is empty. Exiting."
-      exit 1
-    fi
-
-    # Poll for job status
-    job_status="PENDING"
-    while [ "$job_status" = "RUNNING" ] || [ "$job_status" = "PENDING" ]
-    do
-     sleep 2
-     job_status=$(databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
-     echo "Status: $job_status"
-    done
-
-    # Get job result
-    RESULT=$(databricks runs get-output --run-id "$RUN_ID")
-
-    RESULT_STATE=$(echo "$RESULT" | jq -r '.metadata.state.result_state')
-    RESULT_MESSAGE=$(echo "$RESULT" | jq -r '.metadata.state.state_message')
-
-    if [ "$RESULT_STATE" = "FAILED" ]; then
-     echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
-     echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
-    else
-     echo "##vso[task.complete result=Succeeded;done=true;]Job completed successfully"
-    fi
-
-    echo "$RESULT" | jq .
+jobs:
+- job: Run_Databricks_Notebook
   displayName: 'Run Databricks Notebook'
-  
-- task: JakubRumpca.azure-pipelines-html-report.PublishHtmlReport.PublishHtmlReport@1
-  displayName: 'Publish HTML Report'
-  condition: always()
-  inputs:
-    reportDir: '$(System.DefaultWorkingDirectory)/Reports'
+  pool:
+    vmImage: 'ubuntu-latest'
 
-- task: PublishPipelineArtifact@1
-  displayName: 'Publish HTML Report to artifact'
-  condition: always()
-  inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/Reports'
-    artifact: 'ML HTML Report'
+  steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.7'
+      addToPath: true
+      architecture: 'x64'
+    displayName: 'Use Python 3.x'
 
+  - script: |
+      pip install databricks-cli jq
+    displayName: 'Install databricks-cli and jq'
+
+  - script: |
+      echo "Configuring Databricks CLI..."
+      databricks configure --token
+
+      # Create a new job and capture the Job ID
+      JOB_ID=$(databricks jobs create --json '{
+       "name": "Testrun",
+       "existing_cluster_id": "${{ variables.cluster-id }}",
+       "timeout_seconds": 3600,
+       "max_retries": 1,
+       "notebook_task": {
+         "notebook_path": "${{ variables.notebook-folder }}${{ variables.notebook-name }}",
+         "base_parameters": {}
+       }
+      }' | jq -r '.job_id')
+
+      echo "Job ID: $JOB_ID"
+
+      # Check if JOB_ID is empty
+      if [ -z "$JOB_ID" ]; then
+        echo "Error: Job ID is empty. Exiting."
+        exit 1
+      fi
+
+      # Run the job and capture the Run ID
+      RUN_ID=$(databricks jobs run-now --job-id "$JOB_ID" | jq -r '.run_id')
+
+      echo "Run ID: $RUN_ID"
+
+      # Check if RUN_ID is empty
+      if [ -z "$RUN_ID" ]; then
+        echo "Error: Run ID is empty. Exiting."
+        exit 1
+      fi
+
+      # Poll for job status
+      job_status="PENDING"
+      while [ "$job_status" = "RUNNING" ] || [ "$job_status" = "PENDING" ]
+      do
+       sleep 2
+       job_status=$(databricks runs get --run-id "$RUN_ID" | jq -r '.state.life_cycle_state')
+       echo "Status: $job_status"
+      done
+
+      # Get job result
+      RESULT=$(databricks runs get-output --run-id "$RUN_ID")
+
+      RESULT_STATE=$(echo "$RESULT" | jq -r '.metadata.state.result_state')
+      RESULT_MESSAGE=$(echo "$RESULT" | jq -r '.metadata.state.state_message')
+
+      if [ "$RESULT_STATE" = "FAILED" ]; then
+       echo "##vso[task.logissue type=error;]$RESULT_MESSAGE"
+       echo "##vso[task.complete result=Failed;done=true;]$RESULT_MESSAGE"
+      else
+       echo "##vso[task.complete result=Succeeded;done=true;]Job completed successfully"
+      fi
+
+      echo "$RESULT" | jq .
+    displayName: 'Run Databricks Notebook'
+
+  - task: JakubRumpca.azure-pipelines-html-report.PublishHtmlReport.PublishHtmlReport@1
+    displayName: 'Publish HTML Report'
+    condition: always()
+    inputs:
+      reportDir: '$(System.DefaultWorkingDirectory)/Reports'
+
+  - task: PublishPipelineArtifact@1
+    displayName: 'Publish HTML Report to artifact'
+    condition: always()
+    inputs:
+      targetPath: '$(System.DefaultWorkingDirectory)/Reports'
+      artifact: 'ML_HTML_Report'
 
   env:
     DATABRICKS_TOKEN: 'dapi1062f3ecc6b393a6c5934704162792b4-3'
