--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -93,13 +93,13 @@ steps:
 
 - script: |
     # Create local report directory
-    mkdir -p $(local-html-report-path)
+    mkdir -p "$(local-html-report-path)"
 
     # Download the HTML reports from Databricks workspace to local path
     IFS=$'\n'
     for report_path in $(html-report-paths); do
-        report_name=$(basename $report_path)
-        databricks workspace export $report_path $(local-html-report-path)/$report_name
+        report_name=$(basename "$report_path")
+        databricks workspace export "$report_path" "$(local-html-report-path)/$report_name"
     done
   displayName: 'Download HTML reports'
 
