--- a/azure_pipeline_ml.yml
+++ b/azure_pipeline_ml.yml
@@ -138,4 +138,18 @@ steps:
     targetPath: '$(local-html-report-path-3)'
     artifact: 'HTMLReport-Monitor_Eval'
   displayName: 'Publish Monitor Evaluation Report'
+
+- task: JakubRumpca.azure-pipelines-html-report.PublishHtmlReport.PublishHtmlReport@1
+  displayName: 'Publish HTML Report 2'
+  condition: always()
+  inputs:
+    reportDir: '$(local-html-report-path-2)'
+    reportTitle: 'Test Train Report'
+
+- task: JakubRumpca.azure-pipelines-html-report.PublishHtmlReport.PublishHtmlReport@1
+  displayName: 'Publish HTML Report 3'
+  condition: always()
+  inputs:
+    reportDir: '$(local-html-report-path-3)'
+    reportTitle: 'Monitor Evaluation Report'
   #End
